# directx_pg

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  com_ptr.h  d3dapp.cpp  d3dapp.h  debug_utils.cpp  debug_utils.h  demo_app.cpp  demo_app.h  errors.cpp  game_timer.cpp  game_timer.h  main.cpp  win_utils.h
src/: CMakeLists.txt  com_ptr.h  d3dapp.cpp  d3dapp.h  debug_utils.cpp  debug_utils.h  demo_app.cpp  demo_app.h  errors.cpp  errors.h  game_timer.cpp  game_timer.h  logger.cpp  logger.h  main.cpp  vertex.h  win_utils.h
src/shaders/: vertex1_fx.fx  vertex1_ps.hlsl  vertex1_vs.hlsl
